# WordFilter

./: .gitignore  CMakeLists.txt  README.md  WordFilter.sln
ClassTesting/: CMakeLists.txt  ClassTesting.vcxproj  test.cpp
WordFilter/: CMakeLists.txt  WordFilter.vcxproj  WordFilter.vcxproj.filters  results.out  text1.in
WordFilter/src/: WordFilter.cpp  wordfilter.h
